2007-11-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	* gnulib.modules: Add fseeko.

2007-10-11  Paul Eggert  <eggert@cs.ucla.edu>

	* gnulib.modules: Add strerror.
	* configure.ac: Don't test for strerror any more; the gnulib
	strerror module handles this.
	* m4/rmt.m4 (PU_RMT): Likewise.

2007-08-19  Sergey Poznyakoff  <gray@gnu.org.ua>

	* paxlib/names.c (safer_name_suffix): Fix variable type

2007-08-17  Sergey Poznyakoff  <gray@gnu.org.ua>

	* paxlib/names.c (hash_string_insert_prefix): New function
	(hash_string_insert): Rewrite using hash_string_insert_prefix
	(safer_name_suffix): Use hash_string_insert_prefix to avoid
	stack allocation. Bug reported by Dmitry V. Levin;

2007-08-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	* lib/rtapelib.c, paxlib/rtape.c: Use last_component instead of
	base_name. Patch by Eric Blake.

2007-06-27  Sergey Poznyakoff  <gray@gnu.org.ua>

        Relicense under GPLv3

2007-06-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c: Print errno status on errors.

2007-06-21  Eric Blake  <ebb9@byu.net>

	Resolve testsuite failures on cygwin.
	* tests/genfile.c (generate_simple_file): Force binary
	mode.
	(generate_files_from_list, generate_sparse_file)
	(exec_checkpoint, exec_command): Likewise.

2006-12-18  Sergey Poznyakoff  <gray@gnu.org.ua>

	* gnulib.modules: Add configmake

2006-12-12  Paul Eggert  <eggert@cs.ucla.edu>

	* rmt/rmt.c (status_device) [!defined MTIOCGET]:
	Fix bracketing typo.  Problem reported by Yutaka Furubayashi.

2006-12-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	* doc/genfile.texi (Generate Mode): Document --seek option.
	* paxlib/error.c (read_fatal_details): Fix wording of the error
	message.
	* tests/genfile.c: Implement new option --seek (similar
	to `dd seek=')

2006-11-29  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/rtapelib.c: Include <rmt-command.h> rather than <localedir.h>,
	to accommodate recent changes to gnulib and tar.
	* rmt/rmt.c: Likewise.