@@ -1,6 +1,6 @@
 # Configuration for paxutils/lib/system.h.
 
-# Copyright (C) 2005, 2006 Free Software Foundation, Inc.
+# Copyright (C) 2005, 2006, 2007 Free Software Foundation, Inc.
 # This file is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -10,7 +10,7 @@ AC_DEFUN([PU_SYSTEM],[
 
   AC_CHECK_HEADERS_ONCE([string.h memory.h fcntl.h sys/wait.h \
  sys/gentape.h sys/tape.h sys/device.h sys/param.h sys/tprintf.h sys/mtio.h \
- sgtty.h sys/io/trioctl.h locale.h])
+ sgtty.h sys/io/trioctl.h locale.h pwd.h grp.h])
 
   AC_CHECK_HEADERS([sys/buf.h], [], [],
    [#if HAVE_SYS_PARAM_H
